Fix T47987: Blender Cycles standalone does not properly read UV coordinates from XML